fix: shadcn layout shifts fix

--- a/src/app/(frontend)/[locale]/globals.css
+++ b/src/app/(frontend)/[locale]/globals.css
@@ -142,6 +142,11 @@ html {
   }
 }
 
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
+
 @layer base {
   * {
     @apply border-border;
